--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/zebasgonza/grupo_13_furnihouse#readme",
   "dependencies": {
+    "app": "^0.1.0",
     "express": "^4.18.2"
   }
 }
