--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "- ¿Qué productos o servicios brindará nuestro sitio?\r    Venta muebles y accesorios de con un estilo industrial o madera con resina.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "dependencies": {
     "app": "^0.1.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
